--- a/compose.yaml
+++ b/compose.yaml
@@ -1,27 +1,27 @@
 services:
-  # api:
-  #   build: .
-  #   ports:
-  #     - '8000:8000'
-  #   restart: "always"
-  #   container_name: ke_service
-  #   develop:
-  #     watch:
-  #       - action: rebuild
-  #         path: .
-  #         target: /code
-  #         ignore: 
-  #           - /code/notebooks/
-  gradio-app:
-    build: 
-      dockerfile: ./Dockerfile_gradio
+  api:
+    build: .
     ports:
-      - '7860:7860'
+      - '8000:8000'
     restart: "always"
-    container_name: gradio_service
+    container_name: ke_service
     develop:
       watch:
         - action: rebuild
           path: .
           target: /code
-    command: python -u /code/app/gradio_main.py
+          ignore: 
+            - /code/notebooks/
+  # gradio-app:
+  #   build: 
+  #     dockerfile: ./Dockerfile_gradio
+  #   ports:
+  #     - '7860:7860'
+  #   restart: "always"
+  #   container_name: gradio_service
+  #   develop:
+  #     watch:
+  #       - action: rebuild
+  #         path: .
+  #         target: /code
+  #   command: python -u /code/app/gradio_main.py
