--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ imageio==2.34.1
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
 ipykernel==6.29.3
-ipython==8.24.0
+# ipython==8.24.0
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.4.2
@@ -123,8 +123,8 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
 rpds-py==0.10.6
-ruff==0.4.5
-scikit-image==0.23.2
+# ruff==0.4.5
+# scikit-image==0.23.2
 scikit-learn==1.4.2
 scipy==1.13.0
 semantic-version==2.10.0
