--- a/requirements.txt
+++ b/requirements.txt
@@ -56,15 +56,15 @@ joblib==1.4.2
 json5==0.9.6
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
-jupyter_client==8.6.1
-jupyter_core==5.5.0
-jupyter-events==0.8.0
-jupyter-lsp==2.2.0
-jupyter_server==2.10.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.11
-jupyterlab-pygments==0.1.2
-jupyterlab_server==2.25.1
+# jupyter_client==8.6.1
+# jupyter_core==5.5.0
+# jupyter-events==0.8.0
+# jupyter-lsp==2.2.0
+# jupyter_server==2.10.0
+# jupyter_server_terminals==0.4.4
+# jupyterlab==4.0.11
+# jupyterlab-pygments==0.1.2
+# jupyterlab_server==2.25.1
 kiwisolver==1.4.5
 lazy_loader==0.4
 Markdown==3.6
@@ -146,10 +146,10 @@ tinycss2==1.2.1
 tomlkit==0.12.0
 toolz==0.12.1
 torch==2.2.1
-torch-model-archiver==0.11.0
-torch-workflow-archiver==0.2.13
-torchaudio==2.2.1
-torchserve==0.11.0
+# torch-model-archiver==0.11.0
+# torch-workflow-archiver==0.2.13
+# torchaudio==2.2.1
+# torchserve==0.11.0
 torchsummary==1.5.1
 torchvision==0.17.1
 tornado==6.3.3
