--- a/requirements.txt
+++ b/requirements.txt
@@ -36,8 +36,8 @@ ffmpy==0.3.2
 filelock==3.13.1
 fonttools==4.52.1
 fsspec==2024.5.0
-gradio==4.31.5
-gradio_client==0.16.4
+# gradio==4.31.5
+# gradio_client==0.16.4
 grpcio==1.63.0
 h11==0.14.0
 httpcore==1.0.5
@@ -74,9 +74,9 @@ matplotlib==3.9.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==2.0.4
-mkl-fft==1.3.8
-mkl-random==1.2.4
-mkl-service==2.4.0
+# mkl-fft==1.3.8
+# mkl-random==1.2.4
+# mkl-service==2.4.0
 mpmath==1.3.0
 nbclient==0.8.0
 nbconvert==7.10.0
